// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser: Component should render correctly 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={
      <FormattedMessage
        defaultMessage="No users with role Editor available"
        id="project.addUser.noData"
        values={Object {}}
      />
    }
  />
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
</styled.div>
`;

exports[`AddUser: Component should render correctly with users 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={
      <FormattedMessage
        defaultMessage="No users with role Editor available"
        id="project.addUser.noData"
        values={Object {}}
      />
    }
  >
    <styled.div
      key="0"
    >
      <styled.div>
        <styled.div>
          Dale Chihuly
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton0"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <styled.div>
        <styled.div>
          Dave Bowie
        </styled.div>
        <styled.div />
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton1"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <styled.div>
        <styled.div>
          Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton2"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
</styled.div>
`;
